--- a/package.json
+++ b/package.json
@@ -11,8 +11,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@handlebars/allow-prototype-access": "^1.0.5",
     "express": "^4.18.2",
     "express-handlebars": "^6.0.7",
+    "mongoose": "^7.0.3",
+    "mongoose-paginate-v2": "^1.7.1",
     "nodemon": "^2.0.21",
     "socket.io": "^4.6.1"
   }
