--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
   "license": "ISC",
   "dependencies": {
     "@handlebars/allow-prototype-access": "^1.0.5",
+    "connect-mongo": "^5.0.0",
     "express": "^4.18.2",
     "express-handlebars": "^6.0.7",
+    "express-session": "^1.17.3",
     "mongoose": "^7.0.3",
     "mongoose-paginate-v2": "^1.7.1",
     "nodemon": "^2.0.21",
