--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "@handlebars/allow-prototype-access": "^1.0.5",
+    "bcrypt": "^5.1.0",
     "connect-mongo": "^5.0.0",
     "express": "^4.18.2",
     "express-handlebars": "^6.0.7",
